@@ -100,6 +100,18 @@
                 <target>17</target>
             </configuration>
         </plugin>
+         <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>client.Main</mainClass>
+                    <options>
+                        <option>--add-modules</option>
+                        <option>ALL-SYSTEM</option>
+                    </options>
+                </configuration>
+            </plugin>
     </plugins>
 </build>
 
